codexも使用できるようにしました。

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -34,6 +34,9 @@ npm install -g npm \
 
 RUN bash -c "source $HOME/.nvm/nvm.sh && npm install -g @anthropic-ai/claude-code"
 
+# Install OpenAI Codex CLI
+RUN bash -c "source $HOME/.nvm/nvm.sh && npm install -g @openai/codex"
+
 # Add Node.js PATH to .bashrc
 RUN echo 'export PATH="$HOME/.nvm/versions/node/$(node --version)/bin:$PATH"' >> /home/ubuntu/.bashrc
 
